--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,10 @@ rand_core = { version = "0.9.3" }
 
 [dev-dependencies]
 expect-test = { version = "1.5.1" }
+ahash = { version = "0.8.2", features = [ "std" ] }
+fxhash = "0.2.1"
+hashbrown = { version = "0.13.2", features = [ "ahash", "raw" ] }
+intmap = "2.0.0"
 
 [profile.release]
 # rustflags = [ "-C", "no-vectorize-loops", "-C", "no-vectorize-slp" ]
