--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ version = "0.1.0"
 
 [lints.rust]
 elided_lifetimes_in_paths = "warn"
+missing_docs = "warn"
 non_ascii_idents = "warn"
 private_bounds = "allow"
 trivial_numeric_casts = "warn"
