--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ version = "0.1.0"
 elided_lifetimes_in_paths = "warn"
 missing_docs = "warn"
 non_ascii_idents = "warn"
+non_snake_case = "allow"
 private_bounds = "allow"
 trivial_numeric_casts = "warn"
 unreachable_pub = "warn"
